--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href='styles.css'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Cosmo Junkie</title>
-</head>
-<body>
-    <nav></nav>
-    
-</body>
+  </head>
+  <body>
+    <nav class="site-nav grid">
+      <h1>Cosmo Junkie</h1>
+      <ul>
+        <li><a href="#portfolio"></a></li>
+        <li><a href="#skills"></a></li>
+        <li><a href="#contact"></a></li>
+      </ul>
+    </nav>
+    <section id="welcome" class="grid">
+      <div class="welcome-text">
+        <h2>Space Enthusiast <br />& JavaScript Developer</h2>
+        <p class="leading">
+          Counting objects: 100% (20/20), done. Delta compression using up to 8
+          threads Compressing objects: 100% (18/18), done. Writing objects: 100%
+          (20/20), 807.00 KiB | 18.77 MiB/s, done. Total 20 (delta 1), reused 0
+        </p>
+        <a href="#portfolio">View my work</a>
+      </div>
+      <div class="welcome-img">
+        <img src="assets/banner_image.png" alt="banner" />
+      </div>
+    </section>
+    <section id="portfolio">
+      <h3>Some of my Projects</h3>
+      <div class="projects grid">
+        <a href="">
+          <img src="assets/project_1.png" alt="space race" />
+          <h4>Space Race Game</h4>
+        </a>
+      </div>
+      <div class="projects grid">
+        <a href="">
+          <img src="assets/project_2.png" alt="space race" />
+          <h4>Space Race Game</h4>
+        </a>
+      </div>
+      <div class="projects grid">
+        <a href="">
+          <img src="assets/project_3.png" alt="space race" />
+          <h4>Space Race Game</h4>
+        </a>
+      </div>
+    </section>
+    <section id="skills">
+      <h3>Things I Can Do</h3>
+      <ul class="grid">
+        <li>
+          <img src="assets/comet_1.svg" alt="js comet" />
+          <h4>JavaScript</h4>
+        </li>
+        <li>
+          <img src="assets/comet_2.svg" alt="html css comet" />
+          <h4>HTML&CSS</h4>
+        </li>
+        <li>
+          <img src="assets/comet_3.svg" alt="react comet" />
+          <h4>React</h4>
+        </li>
+        <li>
+          <img src="assets/comet_4.svg" alt="Redux comet" />
+          <h4>Redux</h4>
+        </li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h3>Get in Touch</h3>
+      <p class="leading"></p>
+      <form action="">
+        <input type="text" placeholder="NAME" />
+        <input type="email" placeholder="EMAIL" />
+        <textarea placeholder="YOUR MESSAGE"></textarea>
+        <button class="button">Send Flare</button>
+      </form>
+    </section>
+    <footer>
+      <div class="grid">
+        <p class="copyright">Copyright 2020 Cosmo Junkie</p>
+        <ul class="social">
+          <li>
+            <a href=""><img src="assets/icon_fb.svg" alt="facebook" /></a>
+          </li>
+          <li>
+            <a href=""><img src="assets/icon_tw.svg" alt="twitter" /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
