add base styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           threads Compressing objects: 100% (18/18), done. Writing objects: 100%
           (20/20), 807.00 KiB | 18.77 MiB/s, done. Total 20 (delta 1), reused 0
         </p>
-        <a href="#portfolio">View my work</a>
+        <a href="#portfolio" class="button">View my work</a>
       </div>
       <div class="welcome-img">
         <img src="assets/banner_image.png" alt="banner" />
