--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <nav class="site-nav grid">
       <h1>Cosmo Junkie</h1>
       <ul>
-        <li><a href="#portfolio"></a></li>
-        <li><a href="#skills"></a></li>
-        <li><a href="#contact"></a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <section id="welcome" class="grid">
@@ -19,8 +19,7 @@
         <h2>Space Enthusiast <br />& JavaScript Developer</h2>
         <p class="leading">
           Counting objects: 100% (20/20), done. Delta compression using up to 8
-          threads Compressing objects: 100% (18/18), done. Writing objects: 100%
-          (20/20), 807.00 KiB | 18.77 MiB/s, done. Total 20 (delta 1), reused 0
+          threads Compressing objects: 100% 
         </p>
         <a href="#portfolio" class="button">View my work</a>
       </div>
@@ -35,14 +34,12 @@
           <img src="assets/project_1.png" alt="space race" />
           <h4>Space Race Game</h4>
         </a>
-      </div>
-      <div class="projects grid">
+
         <a href="">
           <img src="assets/project_2.png" alt="space race" />
           <h4>Space Race Game</h4>
         </a>
-      </div>
-      <div class="projects grid">
+
         <a href="">
           <img src="assets/project_3.png" alt="space race" />
           <h4>Space Race Game</h4>
