add css styles contact section and footer for mobile version

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <section id="contact">
       <h3>Get in Touch</h3>
-      <p class="leading"></p>
+      <p class="leading">dddddddddddddddd dddddd  ddddsssss</p>
       <form action="">
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
