--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <title>Cosmo Junkie</title>
   </head>
@@ -16,61 +17,67 @@
     </nav>
     <section id="welcome" class="grid">
       <div class="welcome-text">
-        <h2>Space Enthusiast <br />& JavaScript Developer</h2>
+        <h2>Space Enthusiast<br />& JavaScript Developer</h2>
         <p class="leading">
-          Counting objects: 100% (20/20), done. Delta compression using up to 8
-          threads Compressing objects: 100% 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
+          consequat.
         </p>
         <a href="#portfolio" class="button">View my work</a>
       </div>
       <div class="welcome-img">
-        <img src="assets/banner_image.png" alt="banner" />
+        <img src="assets/banner_image.png" alt="pic of planet" />
       </div>
     </section>
     <section id="portfolio">
       <h3>Some of my Projects</h3>
       <div class="projects grid">
-        <a href="">
-          <img src="assets/project_1.png" alt="space race" />
+        <a href="#">
+          <img src="assets/project_1.png" alt="space race image" />
           <h4>Space Race Game</h4>
         </a>
-
-        <a href="">
-          <img src="assets/project_2.png" alt="space race" />
-          <h4>Space Race Game</h4>
+        <a href="#">
+          <img src="assets/project_2.png" alt="planet boy image" />
+          <h4>Planet Boy API</h4>
         </a>
-
-        <a href="">
-          <img src="assets/project_3.png" alt="space race" />
-          <h4>Space Race Game</h4>
+        <a href="#">
+          <img src="assets/project_3.png" alt="captain cosmo image" />
+          <h4>Captain Cosmo Blog</h4>
         </a>
+        <!-- <a href="#">
+        <img src="assets/project_3.png" alt="captain cosmo image">
+        <h4>Captain Cosmo Blog 2</h4>
+      </a> -->
       </div>
     </section>
     <section id="skills">
       <h3>Things I Can Do</h3>
       <ul class="grid">
         <li>
-          <img src="assets/comet_1.svg" alt="js comet" />
+          <img src="assets/comet_1.svg" alt="comet" />
           <h4>JavaScript</h4>
         </li>
         <li>
-          <img src="assets/comet_2.svg" alt="html css comet" />
-          <h4>HTML&CSS</h4>
-        </li>
-        <li>
-          <img src="assets/comet_3.svg" alt="react comet" />
+          <img src="assets/comet_2.svg" alt="comet" />
           <h4>React</h4>
         </li>
         <li>
-          <img src="assets/comet_4.svg" alt="Redux comet" />
-          <h4>Redux</h4>
+          <img src="assets/comet_3.svg" alt="comet" />
+          <h4>Firebase</h4>
+        </li>
+        <li>
+          <img src="assets/comet_4.svg" alt="comet" />
+          <h4>Flutter</h4>
         </li>
       </ul>
+      <p class="leading">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla
+        lacus diam. Mauris fringilla consectetur nibh, sit amet tempus augue.
+      </p>
     </section>
     <section id="contact">
-      <h3>Get in Touch</h3>
-      <p class="leading">dddddddddddddddd dddddd  ddddsssss</p>
-      <form action="">
+      <h3>Get In Touch</h3>
+      <p class="leading">Lorem ipsum dolor sit amet, consectetur.</p>
+      <form>
         <input type="text" placeholder="NAME" />
         <input type="email" placeholder="EMAIL" />
         <textarea placeholder="YOUR MESSAGE"></textarea>
@@ -82,10 +89,10 @@
         <p class="copyright">Copyright 2020 Cosmo Junkie</p>
         <ul class="social">
           <li>
-            <a href=""><img src="assets/icon_fb.svg" alt="facebook" /></a>
+            <a href="#"><img src="assets/icon_fb.svg" alt="facebook" /></a>
           </li>
           <li>
-            <a href=""><img src="assets/icon_tw.svg" alt="twitter" /></a>
+            <a href="#"><img src="assets/icon_tw.svg" alt="twitter" /></a>
           </li>
         </ul>
       </div>
