add styles for desctop (min width 1200px)

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
       <ul class="grid">
         <li>
           <img src="assets/comet_1.svg" alt="comet" />
-          <h4>JavaScript</h4>
+          <h4>HTML/CSS</h4>
         </li>
         <li>
           <img src="assets/comet_2.svg" alt="comet" />
-          <h4>React</h4>
+          <h4>JavaScript</h4>
         </li>
         <li>
           <img src="assets/comet_3.svg" alt="comet" />
-          <h4>Firebase</h4>
+          <h4>React</h4>
         </li>
         <li>
           <img src="assets/comet_4.svg" alt="comet" />
-          <h4>Flutter</h4>
+          <h4>REST API</h4>
         </li>
       </ul>
       <p class="leading">
