--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Cosmo Junkie</title>
+    <title>Cosmo CV</title>
   </head>
   <body>
     <nav class="site-nav grid">
-      <h1>Cosmo Junkie</h1>
+      <h1>Cosmo CV</h1>
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -17,10 +17,13 @@
     </nav>
     <section id="welcome" class="grid">
       <div class="welcome-text">
-        <h2>Space Enthusiast<br />& JavaScript Developer</h2>
+        <h2>Space Enthusiast<br />& Front-end Developer</h2>
         <p class="leading">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo
-          consequat.
+          I am a frontend developer who devotes a lot of time to learning and
+          personal development. I am currently working with the following
+          technologies: HTML, CSS, JS, React, Redux, RestAPI etc. I know that I can
+          study hard. I am looking for an opportunity to bring real benefits and
+          results in the future workplace in a team of professionals.
         </p>
         <a href="#portfolio" class="button">View my work</a>
       </div>
@@ -31,22 +34,24 @@
     <section id="portfolio">
       <h3>Some of my Projects</h3>
       <div class="projects grid">
-        <a href="#">
-          <img src="assets/project_1.png" alt="space race image" />
-          <h4>Space Race Game</h4>
+        <a
+          href="https://xrenore3.github.io/Basic-Projects_main-site/"
+          target="_blank"
+        >
+          <img src="assets/project_1.png" alt="Basic React Projects" />
+          <h4>Basic React Projects</h4>
         </a>
-        <a href="#">
-          <img src="assets/project_2.png" alt="planet boy image" />
-          <h4>Planet Boy API</h4>
+        <a
+          href="https://xrenore3.github.io/ReactSocialNetwork/#/ReactSocialNetwork/profile"
+          target="_blank"
+        >
+          <img src="assets/project_2.png" alt="Social-network" />
+          <h4>Social-network</h4>
         </a>
-        <a href="#">
-          <img src="assets/project_3.png" alt="captain cosmo image" />
-          <h4>Captain Cosmo Blog</h4>
+        <a href="https://github.com/Xrenore3" target="_blank">
+          <img src="assets/project_3.png" alt="GitHub" />
+          <h4>GitHub</h4>
         </a>
-        <!-- <a href="#">
-        <img src="assets/project_3.png" alt="captain cosmo image">
-        <h4>Captain Cosmo Blog 2</h4>
-      </a> -->
       </div>
     </section>
     <section id="skills">
@@ -70,18 +75,17 @@
         </li>
       </ul>
       <p class="leading">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla
-        lacus diam. Mauris fringilla consectetur nibh, sit amet tempus augue.
+       <!-- Soon -->
       </p>
     </section>
     <section id="contact">
       <h3>Get In Touch</h3>
-      <p class="leading">Lorem ipsum dolor sit amet, consectetur.</p>
-      <form>
-        <input type="text" placeholder="NAME" />
-        <input type="email" placeholder="EMAIL" />
-        <textarea placeholder="YOUR MESSAGE"></textarea>
-        <button class="button">Send Flare</button>
+      <p class="leading">Thanks for any feedback.</p>
+      <form method="POST" action="https://formspree.io/f/xvovrjje">
+        <input type="text" name="Name" placeholder="NAME" required />
+        <input type="email" name="Email" placeholder="EMAIL" />
+        <textarea name="Message" required placeholder="YOUR MESSAGE"></textarea>
+        <button type='submit' class="button">Send</button>
       </form>
     </section>
     <footer>
